Fix jekyll format.

--- a/_posts/2019-07-23-「グロースハック完全読本」まとめ.md
+++ b/_posts/2019-07-23-「グロースハック完全読本」まとめ.md
@@ -1,4 +1,12 @@
-# グロースハック完全読本
+---
+layout: default
+title: 「グロースハック完全読本」まとめ
+excerpt: 「グロースハック完全読本」を読了したので内容をざっくりまとめてみました。
+date: 2019-07-23
+---
+# 「グロースハック完全読本」まとめ
+
+「グロースハック完全読本」を読了したので内容をざっくりまとめてみました。
 
 ## 第一部
 
