Add a new post.

--- a/_posts/2019-07-23-「グロースハック完全読本」まとめ.md
+++ b/_posts/2019-07-23-「グロースハック完全読本」まとめ.md
@@ -8,6 +8,13 @@ date: 2019-07-23
 
 「グロースハック完全読本」を読了したので内容をざっくりまとめてみました。
 
+## 感想
+- グロースハックの概要やフローについて大まかに理解することができた。
+  - 基本的には分析->仮説->検証->結果のループを行う。
+  - サービスの状況を適切に判断して追うべき指標を決めるのが難しそう。
+  - 実践して続けていくのは大変だが、サービスやユーザと向き合う意識を忘れないようにしたい。
+- メジャーなサービスの事例がたくさん紹介されていた。
+
 ## 第一部
 
 ### 第１章 グロースチームを結成する
